feat(Button.Group): 拆分 button group 为自有主页

--- a/components/button/style/_mixins.scss
+++ b/components/button/style/_mixins.scss
@@ -24,18 +24,18 @@ $colors: (
   normal-text: var(--gray-900),
   normal-bg: #fff,
   normal-bg-hover: var(--gray-100),
-  normal-bg-active: var(--gray-200),
+  normal-bg-active: var(--gray-100),
   normal-border: (
-    0 3px 3px 0 rgba(0, 0, 0, 0.03),
-    0 0 0 1px var(--gray-400),
+    0 3px 6px rgba(0, 0, 0, 0.01),
+    0 0 0 1px #ddd,
   ),
   normal-border-hover: (
-    0 3px 3px 0 rgba(0, 0, 0, 0.03),
-    0 0 0 1px var(--gray-500),
+    0 3px 5px rgba(0, 0, 0, 0.03),
+    0 0 0 1px #ddd,
   ),
   normal-border-active: (
-    inset 0 1px 2px 0 rgba(0, 0, 0, 0.04),
-    0 0 0 1px var(--gray-500),
+    inset 0 2px 2px rgba(0, 0, 0, 0.04),
+    0 0 0 1px #ddd,
   ),
   primary-text: #fff,
   primary-bg: var(--primary-color),
