--- a/components/select/style/_select.scss
+++ b/components/select/style/_select.scss
@@ -7,6 +7,7 @@ $prefix: "adui-select";
   display: inline-block;
   min-width: 77px;
   height: 36px;
+  transform: translate3d(0, 0, 0);
 
   &-allow-clear {
     &:not(.#{$prefix}-disabled) {
@@ -18,6 +19,12 @@ $prefix: "adui-select";
           }
         }
       }
+    }
+  }
+
+  &-value_is_empty_string {
+    .#{$prefix}-selection-item {
+      color: var(--gray-700);
     }
   }
 
@@ -68,7 +75,7 @@ $prefix: "adui-select";
   }
 
   &-placeholder-text {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 25px;
     bottom: 0;
@@ -77,7 +84,6 @@ $prefix: "adui-select";
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color: var(--transparent-gray-700);
   }
 
   &-selection-search {
