style(Table): cellInner 增加 flex:1

--- a/components/table/style/_table.scss
+++ b/components/table/style/_table.scss
@@ -246,6 +246,7 @@ $prefix: "adui-table";
     word-break: break-all;
   }
   &-cellInner {
+    flex: 1;
     min-width: 0;
     overflow: hidden;
     white-space: inherit;
