fix(Select): 修复空字符串时，出现 clearIcon 的问题

--- a/components/select/style/_select.scss
+++ b/components/select/style/_select.scss
@@ -26,6 +26,10 @@ $prefix: "adui-select";
     .#{$prefix}-selection-item {
       color: var(--gray-700);
     }
+
+    .#{$prefix}-clear {
+      display: none;
+    }
   }
 
   &-selector {
