fix(TableFilter): 修复多选时没有选中态的样式错误

--- a/components/table/style/_table.scss
+++ b/components/table/style/_table.scss
@@ -475,6 +475,7 @@ $prefix: "adui-table";
     padding-bottom: 4px;
     flex-direction: column;
     align-items: flex-start;
+    user-select: none;
 
     label {
       display: flex;
