--- a/components/table/style/_table.scss
+++ b/components/table/style/_table.scss
@@ -475,6 +475,7 @@ $prefix: "adui-table";
     padding-top: 4px;
     padding-bottom: 4px;
     flex-direction: column;
+    flex-wrap: nowrap;
     align-items: flex-start;
     user-select: none;
     max-height: 232px;
