fix(Table): 1. 修复表头不可选中的问题，去除了 user-select; 2. 空状态下表头无法滚动，这里因结构问题 placeholder 是写在 table 外的，移到 table 内后，又可能因为 table 的横向滚动造成问题，因此加入了 sticky

--- a/components/table/style/_table.scss
+++ b/components/table/style/_table.scss
@@ -117,7 +117,6 @@ $prefix: "adui-table";
     .#{$prefix}-cell {
       flex: 1;
       color: var(--gray-800);
-      user-select: none;
     }
 
     &:last-of-type {
@@ -421,6 +420,8 @@ $prefix: "adui-table";
     }
   }
   &-placeholder {
+    position: sticky;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -595,11 +596,6 @@ $prefix: "adui-table";
   }
   &-affixScrollbar_show {
     display: block;
-  }
-  &-empty {
-    .#{$prefix}-mainTable {
-      overflow: hidden;
-    }
   }
   &-loading {
     .#{$prefix}-tbody {
