fix(Input): 修复 Safari disabled 文字颜色问题

--- a/components/channels-input/style/_input.scss
+++ b/components/channels-input/style/_input.scss
@@ -117,6 +117,9 @@ $prefix: "adui-channels-input";
   &-disabled {
     .#{$prefix}-base {
       color: var(--gray-700);
+      // 20220830 修复 Safari 文字消失问题
+      -webkit-text-fill-color: var(--gray-700);
+      opacity: 1;
       cursor: not-allowed;
     }
 
