feat(TimePicker): 支持秒的选择

--- a/components/time-picker/style/_timepicker.scss
+++ b/components/time-picker/style/_timepicker.scss
@@ -20,6 +20,12 @@ $prefix: "adui-time";
     width: calc(var(--width) * 1px);
   }
 
+  &-secondsAvailable {
+    &.#{$prefix}-input {
+      width: calc(var(--width) * 1px + 10px);
+    }
+  }
+
   // TimeSelect
   &-timeSelect {
     display: inline-block;
