fix(TreeSelect): 修复 inline-block 内部高度 34px，外层 30px 的问题

--- a/components/tree-select/style/_tree.scss
+++ b/components/tree-select/style/_tree.scss
@@ -12,6 +12,7 @@ $prefix: "adui-tree-select";
   color: var(--transparent-gray-900);
   font-size: 13px;
   line-height: 1.5;
+  vertical-align: top;
 
   &-wrapper {
     position: relative;
