--- a/components/style/base.css
+++ b/components/style/base.css
@@ -81,6 +81,93 @@
   --tp-w-sm: 84;
   --tp-w-md: 88;
   --tp-w-lg: 104;
+
+  --adui-motion-ease-base: cubic-bezier(0.23, 0.14, 0.18, 1);
+  --adui-motion-ease-base: linear(
+    0,
+    0.00136 0.75%,
+    0.00548 1.53%,
+    0.02204 3.18%,
+    0.04987 4.97%,
+    0.09006 6.971%,
+    0.17662 10.521%,
+    0.38293 18.122%,
+    0.47658 21.742%,
+    0.56587 25.523%,
+    0.64251 29.183%,
+    0.70502 32.603%,
+    0.75982 36.084%,
+    0.80755 39.664%,
+    0.84883 43.394%,
+    0.87017 45.665%,
+    0.88957 48.015%,
+    0.90702 50.445%,
+    0.92261 52.965%,
+    0.93651 55.606%,
+    0.94873 58.366%,
+    0.96857 64.346%,
+    0.98253 70.917%,
+    0.99197 78.578%,
+    0.99757 87.809%,
+    1.00018
+  );
+  --adui-motion-duration-base: 0.2s;
+  --adui-motion-ease-bounce: cubic-bezier(0.36, 1.46, 0.38, 1.01);
+  /* --adui-motion-ease-bounce: linear(
+    0,
+    0.0017 0.54%,
+    0.00687 1.1%,
+    0.02755 2.27%,
+    0.0624 3.53%,
+    0.11264 4.92%,
+    0.22385 7.421%,
+    0.60137 15.082%,
+    0.70934 17.622%,
+    0.7987 20.072%,
+    0.87345 22.552%,
+    0.93357 25.073%,
+    0.98032 27.683%,
+    0.99906 29.043%,
+    1.01477 30.443%,
+    1.032 32.503%,
+    1.04379 34.693%,
+    1.05046 37.064%,
+    1.05225 39.704%,
+    1.05046 41.924%,
+    1.0459 44.504%,
+    1.02207 53.915%,
+    1.01272 58.216%,
+    1.00623 62.176%,
+    1.00166 66.267%,
+    0.99857 71.217%,
+    0.99732 77.008%,
+    0.99956
+  ); */
+  --adui-motion-ease-bounce: linear(
+    0,
+    0.008,
+    0.032 2%,
+    0.129 4.3%,
+    0.675 12.8%,
+    0.885 16.8%,
+    0.963,
+    1.023,
+    1.068,
+    1.097 25%,
+    1.108,
+    1.114 27.8%,
+    1.115,
+    1.111 31.1%,
+    1.094 34.1%,
+    1.04 41.2%,
+    1.017 44.9%,
+    0.999,
+    0.989 53.4%,
+    0.987 59.9%,
+    1.001 80.4%,
+    1
+  );
+  --adui-motion-duration-bounce: 0.4s;
 }
 html {
   box-sizing: border-box;
