--- a/site/propertyBox/components/propertyBox.scss
+++ b/site/propertyBox/components/propertyBox.scss
@@ -159,7 +159,8 @@ button.copyBtn {
   font-size: 12px;
   color: #6b6b6b;
   cursor: pointer;
-  transition: background-color 0.1s cubic-bezier(0.4, 1, 0.75, 0.9);
+  transition: var(--adui-motion-duration-bounce) var(--adui-motion-ease-bounce)
+    all;
 
   &::before {
     position: absolute;
@@ -173,9 +174,8 @@ button.copyBtn {
     background: #f6f6f6;
     border-radius: 6px;
     content: "";
-    transition: transform 0.15s cubic-bezier(0.4, 1, 0.75, 0.9),
-      opacity 0.1s cubic-bezier(0.4, 1, 0.75, 0.9),
-      background-color var(--motion-duration-fast);
+    transition: var(--adui-motion-duration-bounce)
+      var(--adui-motion-ease-bounce) all;
   }
 
   &:hover {
@@ -206,7 +206,8 @@ button.copyBtn {
 
   .iconName {
     text-align: center;
-    transition: transform 0.1s cubic-bezier(0.4, 1, 0.75, 0.9);
+    transition: var(--adui-motion-duration-bounce)
+      var(--adui-motion-ease-bounce) all;
   }
   .copyIconName {
     margin-top: 1.5em;
@@ -217,8 +218,8 @@ button.copyBtn {
     text-align: center;
     opacity: 0;
     transform: translateY(-12px);
-    transition: transform 0.1s cubic-bezier(0.4, 1, 0.75, 0.9),
-      opacity 0.1s cubic-bezier(0.4, 1, 0.75, 0.9);
+    transition: var(--adui-motion-duration-bounce)
+      var(--adui-motion-ease-bounce) all;
   }
   .copiedIconName {
     color: var(--primary-color);
