--- a/components/style/base.css
+++ b/components/style/base.css
@@ -145,29 +145,48 @@
   ); */
   --adui-motion-ease-bounce: linear(
     0,
+    0.002,
     0.008,
-    0.032 2%,
-    0.129 4.3%,
-    0.675 12.8%,
-    0.885 16.8%,
-    0.963,
-    1.023,
-    1.068,
-    1.097 25%,
-    1.108,
-    1.114 27.8%,
-    1.115,
-    1.111 31.1%,
-    1.094 34.1%,
-    1.04 41.2%,
-    1.017 44.9%,
-    0.999,
-    0.989 53.4%,
-    0.987 59.9%,
-    1.001 80.4%,
+    0.017,
+    0.031 2%,
+    0.07,
+    0.126 4.3%,
+    0.182,
+    0.251 6.4%,
+    0.54 10.8%,
+    0.664,
+    0.778,
+    0.872 16.8%,
+    0.913,
+    0.949,
+    0.982,
+    1.01,
+    1.034,
+    1.054,
+    1.071 24%,
+    1.084 25.2%,
+    1.09,
+    1.095,
+    1.099,
+    1.102,
+    1.103 28.8% 29.7%,
+    1.102,
+    1.1 31.4%,
+    1.094 32.8%,
+    1.085 34.5%,
+    1.037 41.7%,
+    1.026,
+    1.016,
+    1.007,
+    1,
+    0.995,
+    0.992 54.2%,
+    0.99 57.2% 60.7%,
+    0.998 74%,
+    1.001 81.4% 88.3%,
     1
   );
-  --adui-motion-duration-bounce: 0.4s;
+  --adui-motion-duration-bounce: 0.5s;
 }
 html {
   box-sizing: border-box;
