--- a/components/style/core/_zoom.scss
+++ b/components/style/core/_zoom.scss
@@ -1,25 +1,29 @@
 @use "../mixins/motion" as *;
 
-@mixin zoom($className, $keyframeName, $duration: var(--motion-duration-base)) {
+@mixin zoom(
+  $className,
+  $keyframeName,
+  $duration: var(--adui-motion-duration-bounce)
+) {
   @include make-motion($className, $keyframeName, $duration);
   .#{$className}-enter,
   .#{$className}-appear {
     transform: scale(0);
-    animation-timing-function: var(--ease-out-circ);
+    animation-timing-function: var(--adui-motion-ease-bounce);
 
     &-prepare {
       transform: none;
     }
   }
   .#{$className}-leave {
-    animation-timing-function: var(--ease-in-out-circ);
+    animation-timing-function: var(--adui-motion-ease-bounce);
   }
 }
 
 @include zoom(zoom, wxadZoom);
 
 // Tooltip
-@include zoom(zoom-big-fast, wxadZoomBig, var(--motion-duration-fast));
+@include zoom(zoom-big-fast, wxadZoomBig, var(--adui-motion-duration-bounce));
 
 @keyframes wxadZoomIn {
   0% {
