feat(Tabs): 根据距离应用 ease / bounce 动效

--- a/components/style/base.css
+++ b/components/style/base.css
@@ -112,37 +112,47 @@
     1.00018
   );
   --adui-motion-duration-base: 0.2s;
-  --adui-motion-ease-bounce: cubic-bezier(0.36, 1.46, 0.38, 1.01);
-  /* --adui-motion-ease-bounce: linear(
+  --adui-motion-ease-gentle: cubic-bezier(.32,.87,.34,1.06);
+  --adui-motion-ease-gentle: linear(
     0,
-    0.0017 0.54%,
-    0.00687 1.1%,
-    0.02755 2.27%,
-    0.0624 3.53%,
-    0.11264 4.92%,
-    0.22385 7.421%,
-    0.60137 15.082%,
-    0.70934 17.622%,
-    0.7987 20.072%,
-    0.87345 22.552%,
-    0.93357 25.073%,
-    0.98032 27.683%,
-    0.99906 29.043%,
-    1.01477 30.443%,
-    1.032 32.503%,
-    1.04379 34.693%,
-    1.05046 37.064%,
-    1.05225 39.704%,
-    1.05046 41.924%,
-    1.0459 44.504%,
-    1.02207 53.915%,
-    1.01272 58.216%,
-    1.00623 62.176%,
-    1.00166 66.267%,
-    0.99857 71.217%,
-    0.99732 77.008%,
-    0.99956
-  ); */
+    0.002,
+    0.006,
+    0.014,
+    0.025 2.5%,
+    0.056 3.8%,
+    0.1,
+    0.144,
+    0.198 8%,
+    0.436 13.9%,
+    0.544,
+    0.645 19.6%,
+    0.69,
+    0.731,
+    0.769,
+    0.803,
+    0.834,
+    0.862,
+    0.888,
+    0.911,
+    0.931,
+    0.949,
+    0.964,
+    0.976,
+    0.987,
+    0.996,
+    1.003,
+    1.009,
+    1.013 47.3%,
+    1.015 49.7%,
+    1.017 53%,
+    1.016 56.9%,
+    1.006 72.6%,
+    1.002 81.4%,
+    1.001 89.7%,
+    1
+  );
+  --adui-motion-duration-gentle: 0.35s;
+  --adui-motion-ease-bounce: cubic-bezier(0.36, 1.46, 0.38, 1.01);
   --adui-motion-ease-bounce: linear(
     0,
     0.002,
